Correccio amb el .csv generat a la part de prediccio

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -1830,7 +1830,8 @@
     "ax.grid()\n",
     "plt.legend()\n",
     "plt.ylim(-15,15)\n",
-    "plt.title('Sorted year elasticity')"
+    "plt.title('Sorted year elasticity')\n",
+    "plt.show()"
    ]
   },
   {
@@ -1854,7 +1855,8 @@
     "type_elasticity_sort.loc[:,'Elasticity'].plot(kind = 'bar',ax= ax, color = ['gray','green'])\n",
     "# ax.set_xticks(region_elasticity_sort.index)\n",
     "ax.grid()\n",
-    "plt.title('Sorted type elasticity')"
+    "plt.title('Sorted type elasticity')\n",
+    "plt.show()"
    ]
   },
   {
@@ -1876,7 +1878,8 @@
     "ax.grid()\n",
     "ax.legend()\n",
     "# plt.ylim(-7.5,2.5)\n",
-    "plt.title('Sorted year elasticity')"
+    "plt.title('Sorted year elasticity')\n",
+    "plt.show()"
    ]
   },
   {
@@ -1914,7 +1917,8 @@
     "ax.grid()\n",
     "ax.legend()\n",
     "# plt.ylim(-15,15)\n",
-    "plt.title('Sorted year elasticity')"
+    "plt.title('Sorted year elasticity')\n",
+    "plt.show()"
    ]
   },
   {
@@ -1947,7 +1951,8 @@
     "fig, ax= plt.subplots(figsize=(20,4))\n",
     "# avocados_relative_mean = (avocados_region_mean - total_mean)*100/total_mean\n",
     "avocados_elasticity_mean.plot(kind = 'bar', color = ['slategray', 'forestgreen'])\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
@@ -1999,7 +2004,8 @@
     "# avocados_relative_mean = (avocados_region_mean - total_mean)*100/total_mean\n",
     "avocados_elasticity_mean.plot(kind = 'bar', color = ['red', 'forestgreen'])\n",
     "plt.title(\"Sort by Date, asi la elasticidad se calcula entre los valores del mismo grupo ( sort_values(by=['region','type', 'Date'] )\")\n",
-    "plt.grid()\n"
+    "plt.grid()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -2031,7 +2037,8 @@
     "# avocados_relative_mean = (avocados_region_mean - total_mean)*100/total_mean\n",
     "avocados_elasticity_mean.plot(kind = 'bar', color = ['red', 'forestgreen'])\n",
     "plt.title(\"Sort by region, asi la elasticidad se calcula MAL!, los valores del mismo grupo son Type y Region ( sort_values(by=['Date','type', 'region'] )\")\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
@@ -2071,7 +2078,8 @@
     "fig, ax= plt.subplots(figsize=(12,3))\n",
     "# avocados_relative_mean = (avocados_region_mean - total_mean)*100/total_mean\n",
     "avocados_elasticity_mean.plot(kind = 'bar', color = ['green', 'forestgreen'])\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
@@ -2721,7 +2729,8 @@
     "plt.legend()\n",
     "ax.set_xticks(conv_year_USA.index)\n",
     "ax.grid()\n",
-    "plt.title('Sorted year elasticity')"
+    "plt.title('Sorted year elasticity')\n",
+    "plt.show()"
    ]
   },
   {
@@ -2740,7 +2749,8 @@
     "ax.grid()\n",
     "# plt.ylim(-10,10)\n",
     "plt.legend()\n",
-    "plt.title('Sorted Date elasticity -TotalUS-')"
+    "plt.title('Sorted Date elasticity -TotalUS-')\n",
+    "plt.show()"
    ]
   },
   {
@@ -3498,8 +3508,8 @@
     "            diccionario_regressiones['Var_R'].append(abs(r2_train - r2_test))\n",
     "            diccionario_regressiones['Random_seed'].append(random_seed)\n",
     "\n",
-    "Resultados_df= pd.DataFrame(diccionario_regressiones)\n",
-    "Resultados_df.to_csv(\"Resultados_df_30_iteracions.csv\")\n",
+    "    Resultados_df= pd.DataFrame(diccionario_regressiones)\n",
+    "    Resultados_df.to_csv(\"Resultados_df_30_iteracions.csv\")\n",
     "\n",
     "best_regions = Resultados_df.groupby('Region')['R_2'].max()\n",
     "\n",
@@ -3574,15 +3584,16 @@
     "#df = pd.read_csv(\"avocado.csv\")\n",
     "#df_cp = df.copy()\n",
     "#df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
+    "# df_cp['region_class']= df_cp['region'].map(region_classification)\n",
+    "\n",
+    "# df_cp = df_cp.rename(columns={df.columns[0]: 'Col_0'}) # Primera columna sin titulo, potencialmente eliminable\n",
+    "# df_cp = df_cp.rename(columns={'4046': 'Volume_Hass_S'}) # Etiquetas mas descritivas\n",
+    "# df_cp = df_cp.rename(columns={'4225': 'Volume_Hass_L'})\n",
+    "# df_cp = df_cp.rename(columns={'4770': 'Volume_Hass_XL'})\n",
+    "\n",
     "av.init()\n",
     "dp_cp = av.df(\"df_cp\")\n",
     "\n",
-    "df_cp['region_class']= df_cp['region'].map(region_classification)\n",
-    "\n",
-    "df_cp = df_cp.rename(columns={df.columns[0]: 'Col_0'}) # Primera columna sin titulo, potencialmente eliminable\n",
-    "df_cp = df_cp.rename(columns={'4046': 'Volume_Hass_S'}) # Etiquetas mas descritivas\n",
-    "df_cp = df_cp.rename(columns={'4225': 'Volume_Hass_L'})\n",
-    "df_cp = df_cp.rename(columns={'4770': 'Volume_Hass_XL'})\n",
     "\n",
     "df_modelo_volume= df_cp.copy()\n",
     "# df_modelo_volume= df_modelo_volume[df_modelo_volume['region'] == 'California']\n",
@@ -3786,15 +3797,17 @@
     "#df = pd.read_csv(\"avocado.csv\")\n",
     "#df_cp = df.copy()\n",
     "#df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
+    "\n",
+    "#df_cp['region_class']= df_cp['region'].map(region_classification)\n",
+    "\n",
+    "#df_cp = df_cp.rename(columns={df.columns[0]: 'Col_0'}) # Primera columna sin titulo, potencialmente eliminable\n",
+    "#df_cp = df_cp.rename(columns={'4046': 'Volume_Hass_S'}) # Etiquetas mas descritivas\n",
+    "##df_cp = df_cp.rename(columns={'4225': 'Volume_Hass_L'})\n",
+    "#df_cp = df_cp.rename(columns={'4770': 'Volume_Hass_XL'})\n",
+    "\n",
     "av.init()\n",
     "dp_cp = av.df(\"df_cp\")\n",
     "\n",
-    "df_cp['region_class']= df_cp['region'].map(region_classification)\n",
-    "\n",
-    "df_cp = df_cp.rename(columns={df.columns[0]: 'Col_0'}) # Primera columna sin titulo, potencialmente eliminable\n",
-    "df_cp = df_cp.rename(columns={'4046': 'Volume_Hass_S'}) # Etiquetas mas descritivas\n",
-    "df_cp = df_cp.rename(columns={'4225': 'Volume_Hass_L'})\n",
-    "df_cp = df_cp.rename(columns={'4770': 'Volume_Hass_XL'})\n",
     "\n",
     "df_modelo_avprice_total= df_cp.copy()\n",
     "# df_modelo_volume= df_modelo_volume[df_modelo_volume['region'] == 'California']\n",
