Mostrar grup 4. Análisis de Cohortes

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -668,7 +668,8 @@
     "fig, ax= plt.subplots(figsize=(20,4))\n",
     "grouped.plot(kind='bar', ax=ax, color = [color_conv, color_orga] )\n",
     "# plt.ylim(0, 0.3*10**9)\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
@@ -683,7 +684,8 @@
     "fig, ax= plt.subplots(figsize=(20,4))\n",
     "price_group.plot(kind='bar', ax=ax, color = [color_conv, color_orga] )\n",
     "# plt.ylim(0, 0.3*10**9)\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
@@ -709,7 +711,8 @@
     "fig, ax= plt.subplots(figsize=(20,4))\n",
     "avocados_relative_mean = (avocados_region_mean - total_mean)*100/total_mean\n",
     "avocados_relative_mean.plot(kind = 'bar', ylabel= '% Price deviation', color = [color_conv, color_orga]) # 'slategray', 'forestgreen'])\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
@@ -740,7 +743,8 @@
     "y_values= unstacked_type['Proportion']\n",
     "ax.scatter(x=x_values, y= y_values )\n",
     "# plt.ylim(0, 0.3*10**9)\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
@@ -2795,7 +2799,7 @@
    "id": "3a241231-da66-45b0-a1e9-312a097b8a68",
    "metadata": {},
    "source": [
-    "#### Analisis por cohortes"
+    "### Analisis por cohortes"
    ]
   },
   {
